feat(deps): removed guava dependency in favour of java built-in features (#75)
* removed guava dependency in favour of java built-in features
* fixed order or resources by sorting in test assertions and code

Covers [UID-458](https://bonitasoft.atlassian.net/browse/UID-458)